========================================================================
Apollo ConfigMap v1.1.0 (2025-01-24)
========================================================================

Enhancements:
* [Metrics] Add http client and sync count metrics